--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 form{
-    width: 30%;
+    width: 20%;
     margin: 0 auto;
     margin-top: 100px;
-    background-color: white;
+    background-color: black;
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 25px;
