--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,8 @@ form{
     padding-right: 5%;
     padding-top: 25px;
     padding-bottom: 40px;
+    border-radius: 20%;
+    color: blueviolet;
 }
 
 .input-el{
@@ -16,6 +18,7 @@ form{
     padding-left: 15px;
     border-radius: 20px;
     border: none;
+    color: blueviolet;
 }
 
 select, button{
